--- a/css/game.css
+++ b/css/game.css
@@ -29,9 +29,15 @@
 
 #userboard {
 	position:absolute;
-	top:0; left:0;
+	bottom:0; left:0;
 	width:300px;
-	height:100%;
+	height:20%;
 	background:#000;
 	color:#fff;
+}
+
+#leaveGame{
+	position:absolute;
+	right: 10px;
+
 }
