--- a/css/game.css
+++ b/css/game.css
@@ -1,43 +1,67 @@
+body{
+	padding:0;
+	margin:0;
+}
 .setCell {
 	width: 100px;
 	height: 100px;
-	border: 5px;
+	/*border: 5px;
 	border-color:black;
-	border-style:solid;
+	border-style:solid;*/
 	background: #fff;
-}
-
-.setCard {
-	width:90%;
-	height:90%;
-	background:green;
-	color: white;
-	text-align: center;
-	font-size: 30px;
-	margin:auto;
-	padding:auto;
 }
 
 #setBoard {
 	border-spacing:0;
 	margin-left:auto;
 	margin-right:auto;
-	border: 5px;
+	/*border: 5px;
 	border-color:black;
-	border-style:solid;
+	border-style:solid;*/
 }
 
 #userboard {
-	position:absolute;
-	bottom:0; left:0;
-	width:300px;
-	height:20%;
-	background:#000;
-	color:#fff;
+	float:left;
+	padding:20px;
+	margin:0;
+	height:100%;
+	background:#ffcc00;
+	color:black;
+	text-align:center;
 }
 
 #leaveGame{
-	position:absolute;
 	right: 10px;
 
+}
+
+button, input[type="submit"], input[type="button"]{
+        border:none;
+        padding:10px;
+        font-weight:700;
+	width:100%;
+	margin-bottom:20px;
+        color:white;
+        background:orange;
+}
+
+button:hover, input[type="submit"]:hover, input[type="button"]:hover{
+        background:green;
+}
+
+th {
+	font-size:20px;
+	background:white;
+	padding:5px;
+}
+
+.userData {
+	background:white;
+	height: 30px;
+}
+
+#userTable {
+	border: 3px;
+	border-color:white;
+	border-style:solid;
 }
