--- a/css/lobby.css
+++ b/css/lobby.css
@@ -1,12 +1,58 @@
 #games {
-    margin-left: auto;
-    margin-right:auto;
-    font-size: 30px;
-    background: green;
+    font-size: 20px;
+}
+
+#gamesTable {
+	width:500px;
+	text-align:center;
+	border:3px;
+	border-style:solid;
 }
 
 body{
+	margin:0;
+	background:white;
+}
 
-	background-color: #eee;
+a {
+	text-decoration:none;
+	color:blue;
+}
 
+a:hover {
+	color:orange;
+}
+
+#header{
+	width:100%;
+	padding:20px;
+	background:orange;
+	font-weight:700;
+	font-size:30px;
+	color:white;
+	text-align:center;
+	
+}
+
+#container{
+	width:800px;
+	margin-left:30%;
+	margin-right:auto;
+}
+
+button, input[type="submit"], input[type="button"]{
+	border:none;
+	padding:10px;
+	font-weight:700;
+	color:white;
+	width:100%;
+	background:orange;
+}
+
+button:hover, input[type="submit"]:hover, input[type="button"]:hover{
+	background:green;
+}
+
+.submitted, .signupSubmitted{
+	text-align:center;
 }
